SERVER-47916 Make InvalidatingLRUCache use an 'epoch' when invalidating evicted checked-out values