src/mongo/db/auth/authorization_manager_impl.h
@@ -154,12 +154,12 @@ private:
                                ThreadPoolInterface& threadPool,
                                AuthzManagerExternalState* externalState);
 
+    private:
         // Even though the dist cache permits for lookup to return boost::none for non-existent
         // values, the contract of the authorization manager is that it should throw an exception if
         // the value can not be loaded, so if it returns, the value will always be set.
-        boost::optional<int> lookup(OperationContext* opCtx, const int& unusedKey) override;
+        boost::optional<int> _lookup(OperationContext* opCtx, int unusedKey);
 
-    private:
         Mutex _mutex =
             MONGO_MAKE_LATCH("AuthorizationManagerImpl::AuthSchemaVersionDistCache::_mutex");
 
@@ -177,12 +177,12 @@ private:
                       AuthSchemaVersionCache* authSchemaVersionCache,
                       AuthzManagerExternalState* externalState);
 
+    private:
         // Even though the dist cache permits for lookup to return boost::none for non-existent
         // values, the contract of the authorization manager is that it should throw an exception if
         // the value can not be loaded, so if it returns, the value will always be set.
-        boost::optional<User> lookup(OperationContext* opCtx, const UserRequest& user) override;
+        boost::optional<User> _lookup(OperationContext* opCtx, const UserRequest& user);
 
-    private:
         Mutex _mutex = MONGO_MAKE_LATCH("AuthorizationManagerImpl::UserDistCacheImpl::_mutex");
 
         AuthSchemaVersionCache* const _authSchemaVersionCache;
